# tigercfo-ai

./: .gitignore  package-lock.json  package.json  tsconfig.json  tsconfig.payroll.json
app/: globals.css  layout.tsx  layout.tsx   page.tsx   globals.css package.json tsconfig.json next.config.js postcss.config.js tailwind.config.ts  page.tsx
app/api/chat/: route.ts
app/api/companies/: route.ts
app/app/: layout.tsx
components/: PayrollProShell.tsx  TigerCFOPrototype.tsx  payrollProData.ts
components/payroll-pages/: BenefitsPage.tsx  CompanySetupPage.tsx  DashboardPage.tsx  EmployeesPage.tsx  GarnishmentsPage.tsx  PayrollHistoryPage.tsx  RunPayrollPage.tsx  TaxDocumentsPage.tsx  TaxLiabilitiesPage.tsx  shared.tsx
db/: client.ts  encryption.ts  migrate.ts  sqliteAdapter.ts
db/migrations/: 0001_initial_schema.sql  0002_payroll_workflow.sql  0003_employer_tax_lines.sql
db/repositories/: companyRepository.ts  employeeRepository.ts  payrollRunRepository.ts  sensitiveDataRepository.ts  taxSettingsRepository.ts
hooks/: useCompanies.ts  useEmployees.ts
payroll-engine/: benefits.ts  calculatePayroll.ts  employerTax.ts  federalTax.ts  fica.ts  garnishments.ts  stateTax.ts
payroll-workflows/: runPayrollWorkflow.ts
services/: apiClient.ts  tauriClient.ts
src-tauri/: Cargo.toml  SIGNING.md  tauri.conf.json
src-tauri/src/: main.rs
tests/: encryption.test.ts  migrations.test.ts  payrollEngine.test.ts  payrollWorkflow.test.ts  repositories.test.ts  sensitiveRepository.test.ts  sqliteAdapter.test.ts
types/: company.ts  employee.ts  payroll.ts
(+3 files in other folders)
